// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GlobalAnnouncementRow renders calendar announcements 1`] = `
<Component
  contentStyle={
    Array [
      Object {
        "borderColor": "#374A59",
        "borderWidth": 1,
      },
    ]
  }
  hideShadow={true}
>
  <TouchableHighlight
    accessibilityTraits="button"
    activeOpacity={0.85}
    onPress={[Function]}
    testID="global-announcement-row.expand"
    underlayColor="transparent"
  >
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "width": 40,
            },
            Object {
              "backgroundColor": "#374A59",
            },
          ]
        }
      >
        <Image
          source={
            Object {
              "testUri": "../../../src/images/dashboard/calendar.png",
            }
          }
          style={
            Object {
              "marginTop": 14,
              "tintColor": "white",
            }
          }
        />
      </View>
      <View
        style={
          Object {
            "flex": 1,
            "marginHorizontal": 12,
            "marginVertical": 8,
          }
        }
      >
        <Text
          style={
            Object {
              "fontWeight": "600",
              "marginRight": 32,
            }
          }
        >
          Permission Slips!
        </Text>
        <SubTitle>
          Tap to view announcement
        </SubTitle>
      </View>
    </View>
  </TouchableHighlight>
  <TouchableHighlight
    accessibilityLabel="Dismiss Permission Slips!"
    accessibilityTraits="button"
    activeOpacity={0.85}
    onPress={[Function]}
    style={
      Object {
        "padding": 12,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
    testID="global-announcement-row.button"
    underlayColor="transparent"
  >
    <Image
      source={
        Object {
          "testUri": "../../../src/images/x-icon.png",
        }
      }
      style={
        Object {
          "tintColor": "#8B969E",
          "width": 16,
        }
      }
    />
  </TouchableHighlight>
</Component>
`;

exports[`GlobalAnnouncementRow renders error announcements 1`] = `
<Component
  contentStyle={
    Array [
      Object {
        "borderColor": "#EE0612",
        "borderWidth": 1,
      },
    ]
  }
  hideShadow={true}
>
  <TouchableHighlight
    accessibilityTraits="button"
    activeOpacity={0.85}
    onPress={[Function]}
    testID="global-announcement-row.expand"
    underlayColor="transparent"
  >
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "width": 40,
            },
            Object {
              "backgroundColor": "#EE0612",
            },
          ]
        }
      >
        <Image
          source={
            Object {
              "testUri": "../../../src/images/Warning.png",
            }
          }
          style={
            Object {
              "marginTop": 14,
              "tintColor": "white",
            }
          }
        />
      </View>
      <View
        style={
          Object {
            "flex": 1,
            "marginHorizontal": 12,
            "marginVertical": 8,
          }
        }
      >
        <Text
          style={
            Object {
              "fontWeight": "600",
              "marginRight": 32,
            }
          }
        >
          Permission Slips!
        </Text>
        <SubTitle>
          Tap to view announcement
        </SubTitle>
      </View>
    </View>
  </TouchableHighlight>
  <TouchableHighlight
    accessibilityLabel="Dismiss Permission Slips!"
    accessibilityTraits="button"
    activeOpacity={0.85}
    onPress={[Function]}
    style={
      Object {
        "padding": 12,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
    testID="global-announcement-row.button"
    underlayColor="transparent"
  >
    <Image
      source={
        Object {
          "testUri": "../../../src/images/x-icon.png",
        }
      }
      style={
        Object {
          "tintColor": "#8B969E",
          "width": 16,
        }
      }
    />
  </TouchableHighlight>
</Component>
`;

exports[`GlobalAnnouncementRow renders information announcements 1`] = `
<Component
  contentStyle={
    Array [
      Object {
        "borderColor": "#374A59",
        "borderWidth": 1,
      },
    ]
  }
  hideShadow={true}
>
  <TouchableHighlight
    accessibilityTraits="button"
    activeOpacity={0.85}
    onPress={[Function]}
    testID="global-announcement-row.expand"
    underlayColor="transparent"
  >
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "width": 40,
            },
            Object {
              "backgroundColor": "#374A59",
            },
          ]
        }
      >
        <Image
          source={
            Object {
              "testUri": "../../../src/images/dashboard/info.png",
            }
          }
          style={
            Object {
              "marginTop": 14,
              "tintColor": "white",
            }
          }
        />
      </View>
      <View
        style={
          Object {
            "flex": 1,
            "marginHorizontal": 12,
            "marginVertical": 8,
          }
        }
      >
        <Text
          style={
            Object {
              "fontWeight": "600",
              "marginRight": 32,
            }
          }
        >
          Permission Slips!
        </Text>
        <SubTitle>
          Tap to view announcement
        </SubTitle>
      </View>
    </View>
  </TouchableHighlight>
  <TouchableHighlight
    accessibilityLabel="Dismiss Permission Slips!"
    accessibilityTraits="button"
    activeOpacity={0.85}
    onPress={[Function]}
    style={
      Object {
        "padding": 12,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
    testID="global-announcement-row.button"
    underlayColor="transparent"
  >
    <Image
      source={
        Object {
          "testUri": "../../../src/images/x-icon.png",
        }
      }
      style={
        Object {
          "tintColor": "#8B969E",
          "width": 16,
        }
      }
    />
  </TouchableHighlight>
</Component>
`;

exports[`GlobalAnnouncementRow renders question announcements 1`] = `
<Component
  contentStyle={
    Array [
      Object {
        "borderColor": "#374A59",
        "borderWidth": 1,
      },
    ]
  }
  hideShadow={true}
>
  <TouchableHighlight
    accessibilityTraits="button"
    activeOpacity={0.85}
    onPress={[Function]}
    testID="global-announcement-row.expand"
    underlayColor="transparent"
  >
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "width": 40,
            },
            Object {
              "backgroundColor": "#374A59",
            },
          ]
        }
      >
        <Image
          source={
            Object {
              "testUri": "../../../src/images/dashboard/help.png",
            }
          }
          style={
            Object {
              "marginTop": 14,
              "tintColor": "white",
            }
          }
        />
      </View>
      <View
        style={
          Object {
            "flex": 1,
            "marginHorizontal": 12,
            "marginVertical": 8,
          }
        }
      >
        <Text
          style={
            Object {
              "fontWeight": "600",
              "marginRight": 32,
            }
          }
        >
          Permission Slips!
        </Text>
        <SubTitle>
          Tap to view announcement
        </SubTitle>
      </View>
    </View>
  </TouchableHighlight>
  <TouchableHighlight
    accessibilityLabel="Dismiss Permission Slips!"
    accessibilityTraits="button"
    activeOpacity={0.85}
    onPress={[Function]}
    style={
      Object {
        "padding": 12,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
    testID="global-announcement-row.button"
    underlayColor="transparent"
  >
    <Image
      source={
        Object {
          "testUri": "../../../src/images/x-icon.png",
        }
      }
      style={
        Object {
          "tintColor": "#8B969E",
          "width": 16,
        }
      }
    />
  </TouchableHighlight>
</Component>
`;

exports[`GlobalAnnouncementRow renders unexpected icon as information 1`] = `
<Component
  contentStyle={
    Array [
      Object {
        "borderColor": "#374A59",
        "borderWidth": 1,
      },
    ]
  }
  hideShadow={true}
>
  <TouchableHighlight
    accessibilityTraits="button"
    activeOpacity={0.85}
    onPress={[Function]}
    testID="global-announcement-row.expand"
    underlayColor="transparent"
  >
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "width": 40,
            },
            Object {
              "backgroundColor": "#374A59",
            },
          ]
        }
      >
        <Image
          source={
            Object {
              "testUri": "../../../src/images/dashboard/info.png",
            }
          }
          style={
            Object {
              "marginTop": 14,
              "tintColor": "white",
            }
          }
        />
      </View>
      <View
        style={
          Object {
            "flex": 1,
            "marginHorizontal": 12,
            "marginVertical": 8,
          }
        }
      >
        <Text
          style={
            Object {
              "fontWeight": "600",
              "marginRight": 32,
            }
          }
        >
          Permission Slips!
        </Text>
        <SubTitle>
          Tap to view announcement
        </SubTitle>
      </View>
    </View>
  </TouchableHighlight>
  <TouchableHighlight
    accessibilityLabel="Dismiss Permission Slips!"
    accessibilityTraits="button"
    activeOpacity={0.85}
    onPress={[Function]}
    style={
      Object {
        "padding": 12,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
    testID="global-announcement-row.button"
    underlayColor="transparent"
  >
    <Image
      source={
        Object {
          "testUri": "../../../src/images/x-icon.png",
        }
      }
      style={
        Object {
          "tintColor": "#8B969E",
          "width": 16,
        }
      }
    />
  </TouchableHighlight>
</Component>
`;

exports[`GlobalAnnouncementRow renders warning announcements 1`] = `
<Component
  contentStyle={
    Array [
      Object {
        "borderColor": "#FC5E13",
        "borderWidth": 1,
      },
    ]
  }
  hideShadow={true}
>
  <TouchableHighlight
    accessibilityTraits="button"
    activeOpacity={0.85}
    onPress={[Function]}
    testID="global-announcement-row.expand"
    underlayColor="transparent"
  >
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "width": 40,
            },
            Object {
              "backgroundColor": "#FC5E13",
            },
          ]
        }
      >
        <Image
          source={
            Object {
              "testUri": "../../../src/images/Warning.png",
            }
          }
          style={
            Object {
              "marginTop": 14,
              "tintColor": "white",
            }
          }
        />
      </View>
      <View
        style={
          Object {
            "flex": 1,
            "marginHorizontal": 12,
            "marginVertical": 8,
          }
        }
      >
        <Text
          style={
            Object {
              "fontWeight": "600",
              "marginRight": 32,
            }
          }
        >
          Permission Slips!
        </Text>
        <SubTitle>
          Tap to view announcement
        </SubTitle>
      </View>
    </View>
  </TouchableHighlight>
  <TouchableHighlight
    accessibilityLabel="Dismiss Permission Slips!"
    accessibilityTraits="button"
    activeOpacity={0.85}
    onPress={[Function]}
    style={
      Object {
        "padding": 12,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
    testID="global-announcement-row.button"
    underlayColor="transparent"
  >
    <Image
      source={
        Object {
          "testUri": "../../../src/images/x-icon.png",
        }
      }
      style={
        Object {
          "tintColor": "#8B969E",
          "width": 16,
        }
      }
    />
  </TouchableHighlight>
</Component>
`;
